tests/compile-tests/bad_nested.stderr
error: expression should be a ==, >= or <= comparison
 --> $DIR/bad_nested.rs:8:6
  |
8 |   c!(x + y - (4 >= 1 - z));
  |      ^^^^^^^^^^^^^^^^^^^^

error[E0369]: binary operation `==` cannot be applied to type `Expr`
 --> $DIR/bad_nested.rs:7:12
  |
7 |   c!(x + y == 2 == 1 - z);
  |      ----- ^^ - {integer}
  |      |
  |      Expr

error[E0369]: binary operation `>=` cannot be applied to type `Expr`
 --> $DIR/bad_nested.rs:9:12
  |
9 |   c!(x + y >= 1 - z >= 43);
  |      ----- ^^ ----- _
  |      |
  |      Expr
